# tecnico-file-system

./: LICENSE  README.md
deploy-1/: Makefile  README.md  main.c  tecnicofs-api-constants.h
deploy-1/outputs/: test1.txt  test3.txt
deploy-2/: CMakeLists.txt  README.md  main.c
deploy-2/fs/: operations.c  operations.h  state.h
deploy-3/: README.md  tecnicofs-api-constants.h
deploy-3/client/: runClient.sh
